bugfix/6.4.0/TUP-16697 Retrieve the BD metadata (cluster config, Hive etc.) through a server-side service/gateway https://jira.talendforge.org/browse/TUP-16697

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -172,6 +172,7 @@ HadoopImportRemoteOptionPage.auth.file=TrustStore file
 HadoopImportRemoteOptionPage.auth.pwd=TrustStore password
 HadoopImportRemoteOptionPage.button.connect=Connect
 HadoopImportRemoteOptionPage.connectionFailed=Connection failed, please check the connection parameters.
+HadoopImportRemoteOptionPage.jobServerFailed=Connection failed, please check the job server status.
 HadoopImportRemoteOptionPage.group.clusters=Discovered clusters
 HadoopImportRemoteOptionPage.button.fetch=Fetch
 
