TUP-17110: fix context problems. add one migration task to adapt old conf jar. improve some parts.

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -188,4 +188,5 @@ HadoopContextConfConfigDialog.msg=Generate hadoop conf jars for each context gro
 HadoopContextConfConfigDialog.topTitle=Hadoop Configuration
 HadoopContextConfConfigDialog.table.contextColumn=Context group
 HadoopContextConfConfigDialog.table.jarNameColumn=Jar name
+HadoopContextConfConfigDialog.prompt.importJar=Please import the jar.
 
