feat(TUP-16699):Support for WebHDFS.

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -125,6 +125,13 @@ HadoopClusterForm.check.azure.container=Container must be specified
 HadoopClusterForm.check.azure.username=User name must be specified
 HadoopClusterForm.check.azure.password=Password must be specified
 HadoopClusterForm.check.azure.deployBlob=Deployment Blob must be specified
+HadoopClusterForm.webHDFS.encryption=WebHDFS Encryption
+HadoopClusterForm.webHDFS.encryption.useSSLEncryption=Use SSL encryption
+HadoopClusterForm.webHDFS.encryption.useSSLEncryption.trustStorePath=Trust store path
+HadoopClusterForm.webHDFS.encryption.useSSLEncryption.trustStorePassword=Trust store password
+HadoopClusterForm.webHDFS.check.trustStorePath=Trust store path must be specified
+HadoopClusterForm.webHDFS.check.trustStorePassword=Trust store password must be specified
+HadoopClusterForm.webHDFS.check.trustStorePassword.invalid=Trust store password is invalid
 
 GoogleDataprocInfoForm.text.configuration=Configuration
 GoogleDataprocInfoForm.text.configuration.projectId=Project identifier
