TUP-17025:Add the Google Dataproc info form on the hadoop wizard.

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -126,6 +126,20 @@ HadoopClusterForm.check.azure.username=User name must be specified
 HadoopClusterForm.check.azure.password=Password must be specified
 HadoopClusterForm.check.azure.deployBlob=Deployment Blob must be specified
 
+GoogleDataprocInfoForm.text.configuration=Configuration
+GoogleDataprocInfoForm.text.configuration.projectId=Project identifier
+GoogleDataprocInfoForm.text.configuration.clusterId=Cluster identifier
+GoogleDataprocInfoForm.text.configuration.region=Region
+GoogleDataprocInfoForm.text.configuration.jarsBucket=Google Storage staging bucket
+GoogleDataprocInfoForm.text.authentication=Authentication
+GoogleDataprocInfoForm.button.authentication.credentials=Provide Google Credentials in file
+GoogleDataprocInfoForm.text.authentication.credentials=Path to Google Credentials file
+GoogleDataprocInfoForm.check.configuration.projectId=Project identifier must be specified
+GoogleDataprocInfoForm.check.configuration.clusterId=Cluster identifier must be specified
+GoogleDataprocInfoForm.check.configuration.region=Region must be specified
+GoogleDataprocInfoForm.check.configuration.jarsBucket=Google Storage staging bucket must be specified
+GoogleDataprocInfoForm.check.authentication.credentials=Path to Google Credentials file must be specified
+
 AbstractHadoopSubForm.separatorSettings=Separator Settings
 AbstractHadoopSubForm.rowSeparator=Row Separator
 AbstractHadoopSubForm.rowSeparator.tooltip=Set the row separator
