--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -177,6 +177,7 @@ HadoopImportRemoteOptionPage.connectionFailed=Connection failed, please check th
 HadoopImportRemoteOptionPage.jobServerFailed=Connection failed, please check the job server status.
 HadoopImportRemoteOptionPage.group.clusters=Discovered clusters
 HadoopImportRemoteOptionPage.button.fetch=Fetch
+HadoopImportRemoteOptionPage.retrieve.check=Retrieve by job server
 
 HadoopServicesTableComposite.button.selectAll=Select All
 HadoopServicesTableComposite.button.deselectAll=Deselect All
