bugfix(TUP-15184)Wrong info shows when check Oozie connection fails
https://jira.talendforge.org/browse/TUP-15184

--- a/main/plugins/org.talend.repository.oozie/src/messages.properties
+++ b/main/plugins/org.talend.repository.oozie/src/messages.properties
@@ -1,7 +1,7 @@
 AbstractOozieForm.checkConnection=Check Connection
-AbstractOozieForm.connectionFailure=Connection failure. You must change the HDFS
+AbstractOozieForm.OozieconnectionFailure=Connection failure. You must change the Oozie connection.
 AbstractOozieForm.connectionSuccessful=connection successful.
-AbstractOozieForm.endPointInvalid=Connection failure. The end point is invalid
+AbstractOozieForm.endPointInvalid=Connection failure. The end point is invalid.
 
 OozieForm.check=Check
 OozieForm.connectionSetting=Connection Settings
