--- a/i18n/plugins/org.talend.designer.hdfsbrowse.nl/src/messages_en.properties
+++ b/i18n/plugins/org.talend.designer.hdfsbrowse.nl/src/messages_en.properties
@@ -16,6 +16,6 @@ CheckHadoopServicesDialog.button.check=Check Again
 CheckHadoopServicesDialog.tab.services.title=Services
 CheckHadoopServicesDialog.tab.exceptions.title=Exceptions of {0}
 CheckHadoopServicesDialog.tab.exceptions.desc=The error log of service "{0}":
-CheckHadoopServicesDialog.status.error.descript=Error log
+CheckHadoopServicesDialog.status.error.desc=Error log
 AbstractHDFSBrowseController.unsupportedOperation.mainMsg=Unsupported operation.
 AbstractHDFSBrowseController.unsupportedOperation.detailMsg=Browsing this file system is not supported. Only HDFS is currently supported.
