--- a/i18n/plugins/org.talend.designer.hdfsbrowse.nl/src/messages_fr.properties
+++ b/i18n/plugins/org.talend.designer.hdfsbrowse.nl/src/messages_fr.properties
@@ -16,6 +16,6 @@ CheckHadoopServicesDialog.button.check=Vérifier à nouveau
 CheckHadoopServicesDialog.tab.services.title=Services
 CheckHadoopServicesDialog.tab.exceptions.title=Exceptions de {0}
 CheckHadoopServicesDialog.tab.exceptions.desc=Log d'erreur du service "{0}" :
-CheckHadoopServicesDialog.status.error.descript=Log d'erreur
+CheckHadoopServicesDialog.status.error.desc=Log d'erreur
 AbstractHDFSBrowseController.unsupportedOperation.mainMsg=Opération non supportée
 AbstractHDFSBrowseController.unsupportedOperation.detailMsg=Parcourir ce système de fichiers n'est pas supporté. Seul HDFS est supporté.
