--- a/main/plugins/org.talend.designer.hdfsbrowse/src/messages.properties
+++ b/main/plugins/org.talend.designer.hdfsbrowse/src/messages.properties
@@ -20,4 +20,4 @@ CheckHadoopServicesDialog.button.check=Check Again
 CheckHadoopServicesDialog.tab.services.title=Services
 CheckHadoopServicesDialog.tab.exceptions.title=Exceptions of {0}
 CheckHadoopServicesDialog.tab.exceptions.desc=The error log of service "{0}":
-CheckHadoopServicesDialog.status.error.descript=Error log
+CheckHadoopServicesDialog.status.error.desc=Error log
