--- a/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages_zh_CN.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages_zh_CN.properties
@@ -18,7 +18,10 @@ HOST.NAME=\u4e3b\u673a
 PASS.NAME=\u4EE3\u7406\u5BC6\u7801
 PORT.NAME=\u4EE3\u7406\u7AEF\u53E3
 USER.NAME=\u7528\u6237\u540D
+LINK_STYLE.NAME=\u6837\u5F0F\u94FE\u63A5
 LINK_STYLE.ITEM.AUTO=\u81EA\u52A8
+LINK_STYLE.ITEM.BEZIER_CURVE=\u8D1D\u585E\u5C14\u66F2\u7EBF
+LINK_STYLE.ITEM.LINE=\u7EBF\uFF08\u6700\u5FEB\uFF09
 CONNECTION.NAME=\u7ec4\u4ef6\u5217\u8868
 SET_FS_DEFAULT_NAME.NAME=\u8BBE\u7F6ENamenode Uri
 HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop\u5C5E\u6027
