--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages_zh_CN.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages_zh_CN.properties
@@ -11,6 +11,7 @@ PIG_VERSION.ITEM.CLOUDERA_CDH4=\u7248\u672C\uFF1ACloudera CDH4.X(MR 1 \u6A21\u5F
 DATABASE_NAME.NAME=\u6570\u636E\u5E93
 TABLE_NAME.NAME=\u8868\u683C
 FIELD_SEPARATOR_CHAR.NAME=\u5b57\u6bb5\u5206\u9694\u7b26
+LOAD.NAME=\u52A0\u8F7D\u529F\u80FD
 DIE_ON_ERROR.NAME=\u6B7B\u5728\u5B50\u4F5C\u4E1A\u7684\u9519\u8BEF
 ADVANCED_PROPERTIES.NAME=Pig \u5C5E\u6027
 ADVANCED_PROPERTIES.ITEM.PROPERTY=\u5C5E\u6027
