--- a/main/plugins/org.talend.designer.hdfsbrowse/src/messages.properties
+++ b/main/plugins/org.talend.designer.hdfsbrowse/src/messages.properties
@@ -9,7 +9,9 @@ AbstractHDFSBrowseController.connectionFailure.mainMsg=Connection failure. You m
 AbstractHDFSBrowseController.connectionFailure.detailMsg=Cannot connect to HDFS "{0}". Please check the connection parameters.
 AbstractHDFSBrowseController.checkConnection=Checking HDFS connection...
 AbstractHDFSBrowseController.unsupportedOperation.mainMsg=Unsupported operation. 
+AbstractHDFSBrowseController.unsupportedOperation.warningMsg=Browsing this file system is not supported in Spark jobs.
 AbstractHDFSBrowseController.unsupportedOperation.detailMsg=Browsing this file system is not supported. Only HDFS is currently supported.
+AbstractHDFSBrowseController.unsupportedOperation.detailMsg1=Browsing this file system is not supported in Spark jobs.
 
 CheckHadoopServicesDialog.title=Checking Hadoop Services
 CheckHadoopServicesDialog.msg=Checking the hadoop services below.
