--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutput/tNeo4jOutput_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutput/tNeo4jOutput_messages_en.properties
@@ -31,12 +31,12 @@ CONNECTION_GROUP.NAME=Connection
 BATCH_OPTION.NAME=Batch
 USE_LABEL.NAME=Use label (Neo4j > 2.0)
 LABEL_NAME.NAME=Label name
-DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X
-DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.1.X
-DB_VERSION.ITEM.NEO4J_2_2_X=Neo4J 2.2.X
 SET_USERNAME.NAME=set username
 USERNAME.NAME=Username
 PASSWORD.NAME=Password
-DB_VERSION.ITEM.NEO4J_2_3_X=Neo4J 2.3.X
-DB_VERSION.ITEM.NEO4J_3_0_X=Neo4J 3.0.X
+DB_VERSION.NAME=DB Version
+DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X (Deprecated)
+DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.1.X (Deprecated)
+DB_VERSION.ITEM.NEO4J_2_2_X=Neo4J 2.2.X (Deprecated)
+DB_VERSION.ITEM.NEO4J_2_3_X=Neo4J 2.3.X (Deprecated)
+DB_VERSION.ITEM.NEO4J_3_X_X=Neo4J 3.X.X
