--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jRow/tNeo4jRow_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jRow/tNeo4jRow_messages_en.properties
@@ -24,12 +24,12 @@ NB_PROPERTY_UPDATED.NAME=Number of updated properties
 NB_NODE_DELETED.NAME=Number of deletes nodes
 NB_RELATIONSHIP_DELETED.NAME=Number of delete relationships
 COMMIT_EVERY.NAME=Commit every
+DB_VERSION.NAME=DB Version
+DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X
+DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.1.X
+DB_VERSION.ITEM.NEO4J_2_2_X=Neo4J 2.2.X
 SET_USERNAME.NAME=set username
 USERNAME.NAME=Username
 PASSWORD.NAME=Password
-DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.NEO4J_1_X_X=Neo4J 1.X.X (Deprecated)
-DB_VERSION.ITEM.NEO4J_2_1_X=Neo4J 2.1.X (Deprecated)
-DB_VERSION.ITEM.NEO4J_2_2_X=Neo4J 2.2.X (Deprecated)
-DB_VERSION.ITEM.NEO4J_2_3_X=Neo4J 2.3.X (Deprecated)
-DB_VERSION.ITEM.NEO4J_3_X_X=Neo4J 3.X.X
+DB_VERSION.ITEM.NEO4J_2_3_X=Neo4J 2.3.X
+DB_VERSION.ITEM.NEO4J_3_0_X=Neo4J 3.0.X
