fix(TUP-19177): Cannot download jars for CDH 513(build-in mode) MR job https://jira.talendforge.org/browse/TUP-19177
Rename buildin to builtin

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -224,7 +224,7 @@ DynamicDistributionOptionForm.form.showOnlyCompatible.label=Show only compatible
 DynamicDistributionOptionForm.newConfig.check.empty=Please click button '{0}' to fetch available versions.
 DynamicDistributionOptionForm.newConfig.check.nameExist=Dynamic distribution named "{0}" is already exist, please check it by option "{1}".
 DynamicDistributionOptionForm.newConfig.exception.noPluginGenerated=Create new dynamic configuration failed.
-DynamicDistributionOptionForm.editExisting.buildin="{0}" is a buildin version, you can't edit it, but you can see details of it or export it.
+DynamicDistributionOptionForm.editExisting.builtin="{0}" is a builtin version, you can't edit it, but you can see details of it or export it.
 DynamicDistributionOptionForm.editExisting.notInCurrentProject="{0}" is in project [{1}] instead of current project, you can't edit it, but you can see details of it or export it.
 DynamicDistributionOptionForm.importConfigText.check.empty=Please browse and select a valid dynamic distribution file.
 DynamicDistributionOptionForm.importConfigText.check.fileNotExist=File not exists in path: {0}
@@ -287,7 +287,7 @@ DynamicDistributionPreferenceForm.delete.progress.deleteFile=Deleting the dynami
 DynamicDistributionPreferenceForm.delete.progress.resetCache=Reseting system cache, please wait...
 DynamicDistributionPreferenceForm.progress.reload=Reloading dynamic distributions, please wait...
 
-DynamicDistributionsLabelProvider.label.existing.buildin={0} [Buildin]
+DynamicDistributionsLabelProvider.label.existing.builtin={0} [Builtin]
 DynamicDistributionsLabelProvider.label.existing.currentProject={0} [Current project]
 DynamicDistributionsLabelProvider.label.existing.otherProject={0} [{1}]
 
