--- a/main/plugins/org.talend.hadoop.distribution/src/main/java/messages.properties
+++ b/main/plugins/org.talend.hadoop.distribution/src/main/java/messages.properties
@@ -8,5 +8,5 @@ DynamicDistriConfigAdapter.diffDistri=Different distribution: {0} <> {1}
 DynamicClassloaderAdapter.exception.noModuleAdapterFound=Can't find module group which id is {0}, if it is not mistake, please check {1}
 DynamicClassloaderAdapter.monitor.buildClassLoader=Generating classloader for {0}
 DynamicDistribution.name.project={0} [{1}]
-DynamicDistribution.name.buildin={0} [Build in]
+DynamicDistribution.name.builtin={0} [Built in]
 DynamicDistribution.name.current=Current project
