--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jImportTool/tNeo4jImportTool_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jImportTool/tNeo4jImportTool_messages_en.properties
@@ -6,14 +6,14 @@ DATABASE_GROUP.NAME=Database folder
 DATABASE_PATH.NAME=Neo4j database folder
 IMPORT_FILES_GROUP.NAME=Import files
 NODE_FILES.NAME=Nodes files
-NODE_FILES.ITEM.FILE=Path to CSV file \n( expression | ex: "/tmp/nodes.csv")
-NODE_FILES.ITEM.HEADERS=CSV Header\n( expression | ex: ":ID,:LABEL")
+NODE_FILES.ITEM.FILE=Path to CSV file ( expression | ex: "/tmp/nodes.csv")
+NODE_FILES.ITEM.HEADERS=CSV Header( expression | ex: ":ID,:LABEL")
 RELATIONSHIP_FILES.NAME=Relationship files
-RELATIONSHIP_FILES.ITEM.FILE=Path to CSV  file \n( expression | ex: "/tmp/edges.csv")
-RELATIONSHIP_FILES.ITEM.HEADERS=CSV Header\n( expression | ex: ":START_ID,:END_ID,:TYPE")
-NEO4J_CONFIGURATION_GROUP.NAME=Neo4j configuration \n(See http://neo4j.com/docs/stable/configuration-settings.html)
-NEO4J_CONFIGURATION.ITEM.KEY=Parameter name \n(string | ex: dbms.pagecache.memory)
-NEO4J_CONFIGURATION.ITEM.VALUE=Parameter value \n(expression | ex: "2G")
-IMPORT_CONFIGURATION_GROUP.NAME=Import configuration \n(See http://neo4j.com/docs/stable/import-tool-usage.html)
-IMPORT_CONFIGURATION.ITEM.KEY=Parameter name  \n(string | ex: stacktrace)
-IMPORT_CONFIGURATION.ITEM.VALUE=Parameter value \n(expression | ex: "2G")
+RELATIONSHIP_FILES.ITEM.FILE=Path to CSV  file ( expression | ex: "/tmp/edges.csv")
+RELATIONSHIP_FILES.ITEM.HEADERS=CSV Header( expression | ex: ":START_ID,:END_ID,:TYPE")
+NEO4J_CONFIGURATION_GROUP.NAME=Neo4j configuration (See http://neo4j.com/docs/stable/configuration-settings.html)
+NEO4J_CONFIGURATION.ITEM.KEY=Parameter name (string | ex: dbms.pagecache.memory)
+NEO4J_CONFIGURATION.ITEM.VALUE=Parameter value (expression | ex: "2G")
+IMPORT_CONFIGURATION_GROUP.NAME=Import configuration (See http://neo4j.com/docs/stable/import-tool-usage.html)
+IMPORT_CONFIGURATION.ITEM.KEY=Parameter name  (string | ex: stacktrace)
+IMPORT_CONFIGURATION.ITEM.VALUE=Parameter value (expression | ex: "2G")
