--- a/i18n/plugins/org.talend.oozie.scheduler.nl/src/messages_pt_BR.properties
+++ b/i18n/plugins/org.talend.oozie.scheduler.nl/src/messages_pt_BR.properties
@@ -7,3 +7,4 @@ TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_MINUTE=Minuto
 TOozieUIConstants_LBL_version_group=Versão
 TOozieUIConstants_LBL_connection_group=Conexão
 ExecuteJobComposite.Server=Servidor
+ExecuteJobCompositeController.doRunAction.Exception.title=Erro
