--- a/i18n/plugins/org.talend.repository.hadoopcluster.nl/src/messages_fr.properties
+++ b/i18n/plugins/org.talend.repository.hadoopcluster.nl/src/messages_fr.properties
@@ -169,6 +169,7 @@ DynamicDistributionsLabelProvider.label.existing.currentProject={0} [Projet cour
 DynamicDistributionsLabelProvider.label.existing.otherProject={0} [{1}]
 DynamicModuleGroupDetailsPage.description=Modifier les dépendances de votre groupe de modules
 ModuleGroupDetailsForm.groupDetails.column.index=Index
+ModuleGroupDetailsForm.groupDetails.btn.add.label=Ajouter
 ModuleGroupDetailsForm.groupDetails.btn.delete.label=Supprimer
 ExceptionDialog.title=Une erreur est survenue
 ExceptionDialog.message.empty=Consultez les logs ci-dessous.
