--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages_ja.properties
@@ -3,6 +3,7 @@ COLUMN_FAMILY.NAME=\u30AB\u30E9\u30E0\u30D5\u30A1\u30DF\u30EA
 COLUMN_FAMILY_CONFIGURATION.NAME=\u30AB\u30E9\u30E0\u30D5\u30A1\u30DF\u30EA\u30FC\u306E\u8A2D\u5B9A
 CONNECTION.NAME=\u30B3\u30F3\u30DD\u30FC\u30CD\u30F3\u30C8\u30EA\u30B9\u30C8
 DIE_ON_ERROR.NAME=\u30A8\u30E9\u30FC\u5F37\u5236\u7D42\u4E86
+HELP=org.talend.help.tCassandraRow
 HOST.NAME=\u30DB\u30B9\u30C8
 KEYSPACE_CONFIGURATION.NAME=\u30AD\u30FC\u30B9\u30DA\u30FC\u30B9\u8A2D\u5B9A
 KEY_COLUMN.NAME=\u30AD\u30FC\u30AB\u30E9\u30E0
@@ -18,6 +19,8 @@ REQUIRED_AUTHENTICATION.NAME=\u8A8D\u8A3C\u3092\u4F7F\u7528
 USERNAME.NAME=\u30E6\u30FC\u30B6\u30FC\u540D
 USE_EXISTING_CONNECTION.NAME=\u65E2\u5B58\u306E\u63A5\u7D9A\u3092\u4F7F\u7528
 DB_VERSION.NAME=DB\u30D0\u30FC\u30B8\u30E7\u30F3
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (\u975E\u63A8\u5968)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (\u975E\u63A8\u5968)
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
 KEY_SPACE_DATASTAX.NAME=\u30AD\u30FC\u30B9\u30DA\u30FC\u30B9
 API_TYPE.NAME=API\u30BF\u30A4\u30D7
