--- a/main/plugins/org.talend.designer.components.bigdata/components/tCouchDBOutput/tCouchDBOutput_messages_pl.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCouchDBOutput/tCouchDBOutput_messages_pl.properties
@@ -18,4 +18,5 @@ DATA_ACTION.ITEM.DELETE=Usu\u0144
 DATA_ACTION.ITEM.INSERT=Insert
 DATA_ACTION.ITEM.UPDATE=aktualizuj
 DATA_ACTION.NAME=Akcja na danych
+KEY.NAME=Klucz
 VALUE.NAME=Warto\u015B\u0107
