--- a/main/plugins/org.talend.designer.components.bigdata/components/tCouchDBWriteConf/tCouchDBWriteConf_messages_pl.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCouchDBWriteConf/tCouchDBWriteConf_messages_pl.properties
@@ -7,3 +7,4 @@ CONNECTION_CONF.NAME=Po\u0142\u0105czenie
 CONNECTION.NAME=Lista komponentów
 AUTHENTICATION.NAME=Autentykacja
 USE_EXISTING_CONNECTION.NAME=U\u017Cyj istniej\u0105cego po\u0142\u0105czenia
+KEY.NAME=Klucz
