--- a/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages_ja.properties
@@ -48,6 +48,7 @@ STORE_BY_HBASE.NAME=HBase\u306B\u3088\u308B\u30B9\u30C8\u30A2
 DEFINE_REGISTER_JAR.NAME=HBase\u7528\u306B\u767B\u9332\u3059\u308Bjar\u3092\u5B9A\u7FA9\u3057\u307E\u3059
 ZOOKEEPER_QUORUM.NAME=Zookeeper\u30AF\u30A9\u30FC\u30E9\u30E0
 ZOOKEEPER_CLIENT_PORT.NAME=Zookeeper\u30AF\u30E9\u30A4\u30A2\u30F3\u30C8\u30DD\u30FC\u30C8
+REGISTER_JAR.NAME=HBase\u7528\u306Bjar\u3092\u767B\u9332
 REGISTER_JAR.ITEM.JAR_NAME=Jar\u540D
 REGISTER_JAR.ITEM.JAR_PATH=Jar\u30D1\u30B9
 REGISTER_JAR.ITEM.JAR_NAME.ITEM.HIVE-HBASE-HANDLER=hive-hbase-\u30CF\u30F3\u30C9\u30E9\u30FC
