--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSList/tHDFSList_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSList/tHDFSList_messages_fr.properties
@@ -22,6 +22,7 @@ USE_KRB.NAME=Utiliser l'authentification de Kerberos
 NAMENODE_PRINCIPAL.NAME=NameNode principal
 DIRECTORY.NAME=Répertoire HDFS
 CASE_SENSITIVE.NAME=Sensible à la casse
+CASE_SENSITIVE.ITEM.NO=Non
 CASE_SENSITIVE.ITEM.YES=Oui
 CURRENT_FILE.NAME=Nom du fichier
 CURRENT_FILEPATH.NAME=Nom du fichier et chemin d'accès
