--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jBatchSchema/tNeo4jBatchSchema_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jBatchSchema/tNeo4jBatchSchema_messages_fr.properties
@@ -1,6 +1,5 @@
 CONNECTION_GROUP.NAME=Base de données
 CONNECTION.NAME=Connexion
 DATABASE_PATH.NAME=Chemin de la base de données
-SCHEMA.NAME=Configuration du Keystore :
-CONFIGURATION.NAME=Configuration du Keystore :
+CONFIGURATION.ITEM.KEY=Nom du paramètre (chaîne | ex: dbms.pagecache.memory)
 CONFIGURATION.ITEM.VALUE=Valeur du paramètre (expression | ex : "2G")
