--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jConnection/tNeo4jConnection_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jConnection/tNeo4jConnection_messages_fr.properties
@@ -17,5 +17,5 @@ USERNAME.NAME=Utilisateur
 PASSWORD.NAME=Mot de passe
 DB_VERSION.ITEM.NEO4J_2_3_X=Neo4J 2.3.X
 DB_VERSION.ITEM.NEO4J_3_2_X=Neo4J 3.2.X
-CONFIGURATION.NAME=Configuration du Keystore :
+CONFIGURATION.ITEM.KEY=Nom du paramètre (chaîne | ex: dbms.pagecache.memory)
 CONFIGURATION.ITEM.VALUE=Valeur du paramètre (expression | ex : "2G")
