--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jImportTool/tNeo4jImportTool_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jImportTool/tNeo4jImportTool_messages_fr.properties
@@ -1,5 +1,14 @@
 HELP=org.talend.help.tNeo4jImportTool
 DATABASE_GROUP.NAME=Dossier de la base de données
 DATABASE_PATH.NAME=Dossier de la base de données Neo4j
-NEO4J_CONFIGURATION.NAME=Configuration du Keystore :
-IMPORT_CONFIGURATION.NAME=Configuration du Keystore :
+NODE_FILES.ITEM.FILE=Chemin vers le fichier CSV (expression | ex. : "/tmp/nodes.csv")
+NODE_FILES.ITEM.HEADERS=En-tête CSV (expression | ex. : ":ID,:LABEL")
+RELATIONSHIP_FILES.NAME=Fichiers de relations
+RELATIONSHIP_FILES.ITEM.FILE=Chemin vers le fichier CSV (expression | ex. : "/tmp/edges.csv")
+RELATIONSHIP_FILES.ITEM.HEADERS=En-tête CSV (expression | ex. : ":START_ID,:END_ID,:TYPE")
+NEO4J_CONFIGURATION_GROUP.NAME=Configuration Neo4j (Voir http://neo4j.com/docs/stable/configuration-settings.html)
+NEO4J_CONFIGURATION.ITEM.KEY=Nom du paramètre (chaîne | ex. : dbms.pagecache.memory)
+NEO4J_CONFIGURATION.ITEM.VALUE=Valeur du paramètre (expression | ex. : "2G")
+IMPORT_CONFIGURATION_GROUP.NAME=Configuration de l'importation (Voir http://neo4j.com/docs/stable/import-tool-usage.html)
+IMPORT_CONFIGURATION.ITEM.KEY=Nom du paramètre (chaîne | ex. : stacktrace)
+IMPORT_CONFIGURATION.ITEM.VALUE=Valeur du paramètre (expression | ex. : "2G")
