--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages_ja.properties
@@ -34,9 +34,12 @@ ADVANCED_PROPERTIES.ITEM.VALUE=\u5024
 HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop\u30D7\u30ED\u30D1\u30C6\u30A3
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=\u30D7\u30ED\u30D1\u30C6\u30A3
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=\u5024
+REGISTER_JAR.NAME=\u767B\u9332jar\u30D5\u30A1\u30A4\u30EB
 REGISTER_JAR.ITEM.JAR_NAME=Jar\u540D
 REGISTER_JAR.ITEM.JAR_PATH=Jar\u30D1\u30B9
+PARTITION_FILTER.NAME=\u30D1\u30FC\u30C6\u30A3\u30B7\u30E7\u30F3\u30D5\u30A3\u30EB\u30BF
 PARTITION_FILTER.ITEM.PART_NAME=\u30D1\u30FC\u30C6\u30A3\u30B7\u30E7\u30F3\u540D
+PARTITION_FILTER.ITEM.PART_VALUE=\u30D1\u30FC\u30C6\u30A3\u30B7\u30E7\u30F3\u5024
 USE_KRB.NAME=Kerberos\u8A8D\u8A3C\u306E\u4F7F\u7528
 NAMENODE_PRINCIPAL.NAME=\u30CD\u30FC\u30E0\u30CE\u30FC\u30C9\u30D7\u30EA\u30F3\u30B7\u30D1\u30EB
 JOBTRACKER_PRINCIPAL.NAME=\u30B8\u30E7\u30D6\u30C8\u30E9\u30C3\u30AB\u30FC\u30D7\u30EA\u30F3\u30B7\u30D1\u30EB
@@ -45,6 +48,7 @@ LOAD.ITEM.HBASESTORAGE=HBaseStorage
 LOAD.ITEM.CUSTOM=\u30AB\u30B9\u30BF\u30E0
 DEFINE_REGISTER_JAR.NAME=HCatalog\u767B\u9332\u306Ejar\u3092\u5B9A\u7FA9
 ADVANCED_CONFIGURATION.NAME=\u8A73\u7D30\u69CB\u6210
+DRIVER_JAR.NAME=\u767B\u9332jar\u30D5\u30A1\u30A4\u30EB
 DRIVER_JAR.ITEM.JAR_NAME=\u30E9\u30A4\u30D6\u30E9\u30EA\u30D1\u30B9
 COMPRESS.NAME=\u51FA\u529B\u30C7\u30FC\u30BF\u3092\u5727\u7E2E\u3059\u308B
 COMPRESSION.ITEM.GZIP=GZIP
