--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages_ja.properties
@@ -20,6 +20,7 @@ STORE.ITEM.HBASESTORAGE=HBaseStorage
 STORE.ITEM.CUSTOM=\u30AB\u30B9\u30BF\u30E0
 DEFINE_REGISTER_JAR.NAME=\u767B\u9332\u7528jar\u30D5\u30A1\u30A4\u30EB\u3092\u5B9A\u7FA9
 ADVANCED_CONFIGURATION.NAME=\u8A73\u7D30\u69CB\u6210
+DRIVER_JAR.NAME=\u767B\u9332jar\u30D5\u30A1\u30A4\u30EB
 DRIVER_JAR.ITEM.JAR_NAME=\u30E9\u30A4\u30D6\u30E9\u30EA\u30D1\u30B9
 HBASE_CONFIGURATION.NAME=HBase\u8A2D\u5B9A
 ZOOKEEPER_QUORUM.NAME=Zookeeper\u30AF\u30A9\u30FC\u30E9\u30E0
