--- a/main/plugins/org.talend.designer.components.bigdata/components/tSAPHanaRow/tSAPHanaRow_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSAPHanaRow/tSAPHanaRow_messages_ja.properties
@@ -41,6 +41,7 @@ SET_PREPAREDSTATEMENT_PARAMETERS.ITEM.PARAMETER_TYPE.ITEM.Date=\u65E5\u6642
 SET_PREPAREDSTATEMENT_PARAMETERS.ITEM.PARAMETER_TYPE.ITEM.Double=\u500D\u6570
 SET_PREPAREDSTATEMENT_PARAMETERS.ITEM.PARAMETER_TYPE.ITEM.Float=Float
 SET_PREPAREDSTATEMENT_PARAMETERS.ITEM.PARAMETER_TYPE.ITEM.Int=\u6574\u6570
+SET_PREPAREDSTATEMENT_PARAMETERS.ITEM.PARAMETER_TYPE.ITEM.Long=Long
 SET_PREPAREDSTATEMENT_PARAMETERS.ITEM.PARAMETER_TYPE.ITEM.Object=\u30AA\u30D6\u30B8\u30A7\u30AF\u30C8
 SET_PREPAREDSTATEMENT_PARAMETERS.ITEM.PARAMETER_TYPE.ITEM.Short=\u77ED\u3044
 SET_PREPAREDSTATEMENT_PARAMETERS.ITEM.PARAMETER_TYPE.ITEM.String=\u6587\u5B57\u5217
