--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages_ja.properties
@@ -1,4 +1,4 @@
-HELP=tSqoopImport\u306E\u30D8\u30EB\u30D7
+HELP=org.talend.help.tSqoopImport
 LONG_NAME=\u5404RDBMS\u30C6\u30FC\u30D6\u30EB\u304B\u3089HDFS\u4E0A\u306E\u30D5\u30A1\u30A4\u30EB\u306B\u30ED\u30FC\u30C9\u3059\u308B
 EXTERNAL.NAME=Sqoop\u306E\u30A4\u30F3\u30DD\u30FC\u30C8
 TEMPFILE.NAME=\u4E00\u6642\u30C7\u30FC\u30BF\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u30D1\u30B9
@@ -18,6 +18,7 @@ ADDITIONAL_JAVA.NAME=\u5F15\u6570\u3092\u8FFD\u52A0
 ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT=\u5F15\u6570
 ADDITIONAL_JAVA.ITEM.ADDITIONAL_VALUE=\u5024
 ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--driver=--driver
+ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--hadoop-home=--hadoop-home
 ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--direct-split-size=--direct-split-size
 ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--inline-lob-limit=--inline-lob-limit
 ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--split-by=--split-by
@@ -44,6 +45,7 @@ ADDITIONAL_JAVA.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
 QUERY_MODE.NAME=\u30AF\u30A8\u30EA
 USE_QUERY.NAME=\u30AF\u30A8\u30EA\u306E\u4F7F\u7528
 QUERY.NAME=\u30AF\u30A8\u30EA
+USE_SPLIT.NAME=split-by \u306E\u4F7F\u7528
 MODE.NAME=\u30E2\u30FC\u30C9
 USE_COMMANDLINE.NAME=\u30B3\u30DE\u30F3\u30C9\u30E9\u30A4\u30F3\u306E\u4F7F\u7528
 USE_JAVAAPI.NAME=Java API\u306E\u4F7F\u7528
