--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages_pl.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopExport/tSqoopExport_messages_pl.properties
@@ -8,3 +8,5 @@ QUERY.NAME=Zapytanie
 VERSION.NAME=Wersja
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM=Argument
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM_VALUE=Warto\u015B\u0107
+HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Warto\u015B\u0107
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_VALUE=Warto\u015B\u0107
