--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages_pl.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages_pl.properties
@@ -6,3 +6,5 @@ ADDITIONAL_JAVA.ITEM.ADDITIONAL_VALUE=Warto\u015B\u0107
 QUERY_MODE.NAME=Zapytanie
 QUERY.NAME=Zapytanie
 VERSION.NAME=Wersja
+HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Warto\u015B\u0107
+ADDITIONAL_ARGUMENTS.ITEM.ADDITIONAL_VALUE=Warto\u015B\u0107
