--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopMerge/tSqoopMerge_messages_ja.properties
@@ -83,6 +83,8 @@ DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1\u30E2\u30FC\u30C9)
 FS_DEFAULT_NAME.NAME=\u30CD\u30FC\u30E0\u30CE\u30FC\u30C9URI
 MAPRED_JOB_TRACKER.NAME=\u30B8\u30E7\u30D6\u30C8\u30E9\u30C3\u30AB\u30FC\u30DB\u30B9\u30C8
 CONFIGURATION.NAME=\u30B7\u30B9\u30C6\u30E0\u8A2D\u5B9A
+USE_SPEED_PARALLEL.NAME=Parallel Data Transfer\u3092\u4F7F\u7528
+SPECIFIC_PARAMS.NAME=\u30D1\u30E9\u30E1\u30FC\u30BF\u30FC\u3092\u8A2D\u5B9A
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM=\u5F15\u6570
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-method=teradata.db.output.method
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-stage-database=teradata.db.output.stage.database
@@ -93,6 +95,7 @@ SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-fastload-socket-port
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-stage-table-suffix=teradata.db.output.stage.table.suffix
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-output-teradata-text-separator=teradata.db.output.teradata.text.separator
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM_VALUE=\u5024
+SPEED_PARALLEL.NAME=\u30B3\u30CD\u30AF\u30BF\u30FC\u56FA\u6709\u8A2D\u5B9A
 HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop\u30D7\u30ED\u30D1\u30C6\u30A3
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=\u30D7\u30ED\u30D1\u30C6\u30A3
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=\u5024
