--- a/i18n/plugins/org.talend.oozie.scheduler.nl/src/messages_ja.properties
+++ b/i18n/plugins/org.talend.oozie.scheduler.nl/src/messages_ja.properties
@@ -1,5 +1,6 @@
 TOozieCommonConstants_oozie_prefix_for_preference=oozie-
 TOozieCommonConstants_OS_windows_name_prefix=Windows
+OozieSchedulerView_Part_name_nojob=Oozie\u30B9\u30B1\u30B8\u30E5\u30FC\u30E9\u30FC
 OozieSchedulerView_Part_name_job=Oozie({0})
 OozieSchedulerView_part_title_name_nojob=Oozie\u306E\u30B8\u30E7\u30D6\u304C\u3042\u308A\u307E\u305B\u3093
 OozieSchedulerView_Part_title_job=Oozie {0}
@@ -7,6 +8,8 @@ TOozieUIConstants_BTN_Schedule=\u30B9\u30B1\u30B8\u30E5\u30FC\u30EB
 TOozieUIConstants_BTN_Run=\u5B9F\u884C
 TOozieUIConstants_BTN_Kill=\u5F37\u5236\u7D42\u4E86
 TOozieUIConstants_BTN_Setting=\u8A2D\u5B9A
+TOozieUIConstants_BTN_StartTime=...
+TOozieUIConstants_BTN_EndTime=...
 TOozieUIConstants_BTN_monitoring=\u76E3\u8996
 TOozieUIConstants_LBL_Path=\u30D1\u30B9
 TOozieUIConstants_LBL_Frequency=\u983B\u5EA6
