--- a/i18n/plugins/org.talend.oozie.scheduler.nl/src/messages_pl.properties
+++ b/i18n/plugins/org.talend.oozie.scheduler.nl/src/messages_pl.properties
@@ -8,3 +8,4 @@ TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_DAY=Dzie\u0144
 TOozieUIConstants_LBL_version_group=Wersja
 TOozieUIConstants_LBL_connection_group=Po\u0142\u0105czenie
 ExecuteJobComposite.Server=Serwer
+ExecuteJobCompositeController.doRunAction.Exception.title=B\u0142\u0105d
