--- a/i18n/plugins/org.talend.repository.hadoopcluster.nl/plugin_ja.properties
+++ b/i18n/plugins/org.talend.repository.hadoopcluster.nl/plugin_ja.properties
@@ -1,3 +1,1 @@
-pluginName=Hadoop\u30AF\u30E9\u30B9\u30BF\u30D7\u30E9\u30B0\u30A4\u30F3
-providerName=.Talend SA.
-hadoopCluster=Hadoop\u30AF\u30E9\u30B9\u30BF
+projectsetting.dynamicDistributionSetting=\u30C0\u30A4\u30CA\u30DF\u30C3\u30AF\u30C7\u30A3\u30B9\u30C8\u30EA\u30D3\u30E5\u30FC\u30B7\u30E7\u30F3\u306E\u8A2D\u5B9A
