--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_ja.properties
@@ -6,6 +6,7 @@ COLUMN_FAMILY_TYPE.ITEM.SUPER=\u30B9\u30FC\u30D1\u30FC
 COLUMN_FAMILY_TYPE.NAME=\u30AB\u30E9\u30E0\u30D5\u30A1\u30DF\u30EA\u30FC\u30BF\u30A4\u30D7
 CONNECTION.NAME=\u30B3\u30F3\u30DD\u30FC\u30CD\u30F3\u30C8\u30EA\u30B9\u30C8
 KEY_SPACE.NAME=\u30AD\u30FC\u30B9\u30DA\u30FC\u30B9
+HELP=org.talend.help.tCassandraInput
 HOST.NAME=\u30DB\u30B9\u30C8
 INC_KEY.NAME=\u51FA\u529B\u30AB\u30E9\u30E0\u306B\u30AD\u30FC\u3092\u542B\u3080
 INC_SUPER_KEY.NAME=\u51FA\u529B\u30AB\u30E9\u30E0\u306B\u30B9\u30FC\u30D1\u30FC\u30AD\u30FC\u3092\u542B\u3080
@@ -34,11 +35,32 @@ SPECIFY_KEYS.NAME=\u30ED\u30A6\u30AD\u30FC\u3092\u6307\u5B9A
 SPECIFY_COLUMNS.NAME=\u30AB\u30E9\u30E0\u3092\u6307\u5B9A
 COLUMNS.NAME=\u30AB\u30E9\u30E0
 ROW_KEY_TYPE.NAME=\u30ED\u30A6\u30AD\u30FC\u30BF\u30A4\u30D7
+ROW_KEY_TYPE.ITEM.INTEGER=\u6574\u6570
+ROW_KEY_TYPE.ITEM.LONG=Long
+ROW_KEY_TYPE.ITEM.DOUBLE=\u500D\u6570
+ROW_KEY_TYPE.ITEM.FLOAT=Float
+ROW_KEY_TYPE.ITEM.CHARACTER=\u6587\u5B57
 ROW_KEY_TYPE.ITEM.STRING=\u6587\u5B57\u5217
 ROW_KEY_TYPE.ITEM.DATE=\u65E5\u6642
+ROW_KEY_TYPE.ITEM.BYTE_ARRAY=\u30D0\u30A4\u30C8[]
+ROW_KEY_TYPE.ITEM.BOOLEAN=\u30D6\u30FC\u30EB\u5024
+ROW_KEY_TYPE.ITEM.OBJECT=\u30AA\u30D6\u30B8\u30A7\u30AF\u30C8
+ROW_KEY_TYPE.ITEM.SHORT=\u77ED\u3044
 SUPER_COLUMN_TYPE.NAME=\u30B9\u30FC\u30D1\u30FC\u30AB\u30E9\u30E0\u30BF\u30A4\u30D7
+SUPER_COLUMN_TYPE.ITEM.INTEGER=\u6574\u6570
+SUPER_COLUMN_TYPE.ITEM.LONG=Long
+SUPER_COLUMN_TYPE.ITEM.DOUBLE=\u500D\u6570
+SUPER_COLUMN_TYPE.ITEM.FLOAT=Float
+SUPER_COLUMN_TYPE.ITEM.CHARACTER=\u6587\u5B57
+SUPER_COLUMN_TYPE.ITEM.STRING=\u6587\u5B57\u5217
 SUPER_COLUMN_TYPE.ITEM.DATE=\u65E5\u6642
+SUPER_COLUMN_TYPE.ITEM.BYTE_ARRAY=\u30D0\u30A4\u30C8[]
+SUPER_COLUMN_TYPE.ITEM.BOOLEAN=\u30D6\u30FC\u30EB\u5024
+SUPER_COLUMN_TYPE.ITEM.OBJECT=\u30AA\u30D6\u30B8\u30A7\u30AF\u30C8
+SUPER_COLUMN_TYPE.ITEM.SHORT=\u77ED\u3044
 DB_VERSION.NAME=DB\u30D0\u30FC\u30B8\u30E7\u30F3
+DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (\u975E\u63A8\u5968)
+DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (\u975E\u63A8\u5968)
 ROW_KEY_TYPE.ITEM.BIGDECIMAL=BigDecimal
 DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
 ROW_KEY_C_TYPE.NAME=\u884C\u30AD\u30FCCassandra\u30BF\u30A4\u30D7
