--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulk/tCassandraOutputBulk_messages_ja.properties
@@ -25,6 +25,8 @@ COMPARATOR.ITEM.TIMEUUIDTYPE=TimeUUIDType
 COMPARATOR.ITEM.UTF8TYPE=UTF8Type
 BUFFER_SIZE.NAME=\u30D0\u30C3\u30D5\u30A1\u30B5\u30A4\u30BA(MB)
 SSTABLE_STORE_PATH.NAME=SSTable\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA
+TABLE_TYPE.NAME=\u30C6\u30FC\u30D6\u30EB\u30BF\u30A4\u30D7
+TABLE_TYPE.ITEM.NON_CQL=non-cql
 TABLE_TYPE.ITEM.CQL=cql
 SCHEMA_STMT.NAME=\u30B9\u30AD\u30FC\u30DE\u5B9A\u7FA9\u6587
 INSERT_STMT.NAME=insert\u6587
