--- a/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages_pl.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages_pl.properties
@@ -10,3 +10,4 @@ CONNECTION.NAME=Lista komponentów
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=W\u0142a\u015Bciwo\u015B\u0107
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Warto\u015B\u0107
 CONN.NAME=Po\u0142\u0105czenie
+ADVANCED_PROPERTIES.ITEM.VALUE=Warto\u015B\u0107
