--- a/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogOperation/tHCatalogOperation_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogOperation/tHCatalogOperation_messages_ja.properties
@@ -38,6 +38,7 @@ SET_USER_GROUP.NAME=\u4F7F\u7528\u3059\u308B\u30E6\u30FC\u30B6\u30FC\u30B0\u30EB
 SET_PERMISSIONS.NAME=\u30D1\u30FC\u30DF\u30C3\u30B7\u30E7\u30F3\u306E\u8A2D\u5B9A
 DB_LOCATION.NAME=\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u4F4D\u7F6E
 DB_DESCRIPTION.NAME=\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u6982\u8981
+CREATE_EXTERNAL.NAME=\u5916\u90E8\u30C6\u30FC\u30D6\u30EB\u306E\u4F5C\u6210
 TABLE_COMMENT.NAME=\u30B3\u30E1\u30F3\u30C8
 STORAGE_FORMAT.NAME=\u5F62\u5F0F
 STORAGE_FORMAT.ITEM.RCFILE=RCFILE
