--- a/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogOperation/tHCatalogOperation_messages_pl.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHCatalogOperation/tHCatalogOperation_messages_pl.properties
@@ -4,6 +4,7 @@ OPERATION_ON.ITEM.OP_TABLE=Tabela
 OPERATION.NAME=Operacja
 TABLE_COMMENT.NAME=Komentarz
 TEMPLETON_PROPERTIES.NAME=W\u0142a\u015Bciwo\u015Bci
+TEMPLETON_PROPERTIES.ITEM.KEY=Klucz
 TEMPLETON_PROPERTIES.ITEM.VALUE=Warto\u015B\u0107
 SET_FIELD_TERMINATED_BY.NAME=Pole
 SET_LINES_TERMINATED_BY.NAME=Linia
