--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSConnection/tHDFSConnection_messages_ja.properties
@@ -1,5 +1,5 @@
 CODE.NAME=\u30B3\u30FC\u30C9
-HELP=tHDFSConnection\u306E\u30D8\u30EB\u30D7
+HELP=org.talend.help.tHDFSConnection
 LONG_NAME=HDFS\u3078\u306E\u63A5\u7D9A\u3092\u4F5C\u6210
 VERSION.NAME=\u30D0\u30FC\u30B8\u30E7\u30F3
 DISTRIBUTION.NAME=\u30C7\u30A3\u30B9\u30C8\u30EA\u30D3\u30E5\u30FC\u30B7\u30E7\u30F3
