--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages_pl.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages_pl.properties
@@ -8,3 +8,4 @@ FILES.NAME=Pliki
 APPEND.NAME=Dodawanie
 CONN.NAME=Po\u0142\u0105czenie
 AUTHENTICATION_MODE.NAME=Autentykacja
+HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Warto\u015B\u0107
