--- a/main/plugins/org.talend.designer.components.bigdata/components/tHDFSRename/tHDFSRename_messages_pl.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHDFSRename/tHDFSRename_messages_pl.properties
@@ -7,3 +7,4 @@ FILES.NAME=Pliki
 CURRENT_STATUS.NAME=Obecny status
 CONN.NAME=Po\u0142\u0105czenie
 AUTHENTICATION_MODE.NAME=Autentykacja
+HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Warto\u015B\u0107
