--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages_en.properties
@@ -176,3 +176,5 @@ GOOGLE_PROJECT_ID.NAME=Project identifier
 GOOGLE_JARS_BUCKET.NAME=Google Storage staging bucket
 DEFINE_PATH_TO_GOOGLE_CREDENTIALS.NAME=Provide Google Credentials in file
 PATH_TO_GOOGLE_CREDENTIALS.NAME=Path to Google Credentials file
+TABLEACTION.ITEM.CREATE_IF_NOT_EXIST=Create table if not exists
+FILE_LOCATION.NAME=URI path
