--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveCreateTable/tHiveCreateTable_messages_ja.properties
@@ -35,6 +35,7 @@ CONNECTION_MODE.NAME=\u63A5\u7D9A\u30E2\u30FC\u30C9
 CONNECTION_MODE.ITEM.EMBEDDED=\u7D44\u307F\u8FBC\u307F
 CONNECTION_MODE.ITEM.STANDALONE=\u30B9\u30BF\u30F3\u30C9\u30A2\u30ED\u30F3
 SET_TEMP_PATH.NAME=\u4E00\u6642\u30D1\u30B9\u306E\u8A2D\u5B9A
+TEMP_PATH_GROUP.NAME=\u4E00\u6642\u30D1\u30B9
 SET_MAPRED_JT.NAME=\u30B8\u30E7\u30D6\u30C8\u30E9\u30C3\u30AB\u30FCURI\u306E\u8A2D\u5B9A
 SET_FS_DEFAULT_NAME.NAME=\u30CD\u30FC\u30E0\u30CE\u30FC\u30C9URI\u306E\u8A2D\u5B9A
 HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop\u30D7\u30ED\u30D1\u30C6\u30A3
@@ -44,7 +45,7 @@ CONN.NAME=\u63A5\u7D9A
 HADOOP_PROPS.NAME=Hadoop \u30D7\u30ED\u30D1\u30C6\u30A3
 TABLEACTION.NAME=\u30C6\u30FC\u30D6\u30EB\u3078\u306E\u30A2\u30AF\u30B7\u30E7\u30F3
 TABLEACTION.ITEM.CREATE_TABLE=\u30C6\u30FC\u30D6\u30EB\u306E\u4F5C\u6210
-TABLEACTION.ITEM.CREATE_IF_NOT_EXIST=\u30C6\u30FC\u30D6\u30EB\u304C\u5B58\u5728\u3057\u306A\u3044\u5834\u5408\u4F5C\u6210
+SET_FILE_LOCATION.NAME=\u30D5\u30A1\u30A4\u30EB\u30ED\u30B1\u30FC\u30B7\u30E7\u30F3\u306E\u8A2D\u5B9A
 SET_PARTITIONS.NAME=\u30D1\u30FC\u30C6\u30A3\u30B7\u30E7\u30F3\u306E\u8A2D\u5B9A
 STORAGE_FORMAT.NAME=\u5F62\u5F0F
 STORAGE_FORMAT.ITEM.RCFILE=RCFILE
@@ -175,3 +176,5 @@ GOOGLE_PROJECT_ID.NAME=\u30D7\u30ED\u30B8\u30A7\u30AF\u30C8\u8B58\u5225\u5B50
 GOOGLE_JARS_BUCKET.NAME=Google\u30B9\u30C8\u30EC\u30FC\u30B8\u30B9\u30C6\u30FC\u30B8\u30F3\u30B0\u30D0\u30B1\u30C3\u30C8
 DEFINE_PATH_TO_GOOGLE_CREDENTIALS.NAME=Google\u30AF\u30EC\u30C7\u30F3\u30B7\u30E3\u30EB\u3092\u30D5\u30A1\u30A4\u30EB\u3067\u6307\u5B9A
 PATH_TO_GOOGLE_CREDENTIALS.NAME=Google\u30AF\u30EC\u30C7\u30F3\u30B7\u30E3\u30EB\u30D5\u30A1\u30A4\u30EB\u30D1\u30B9
+TABLEACTION.ITEM.CREATE_IF_NOT_EXIST=\u5B58\u5728\u3057\u306A\u3044\u5834\u5408\u306F\u30C6\u30FC\u30D6\u30EB\u3092\u4F5C\u6210
+FILE_LOCATION.NAME=URI\u30D1\u30B9
