--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages_ja.properties
@@ -1,3 +1,4 @@
+HELP=org.talend.help.tHiveInput
 LONG_NAME=HiveQL\u30AF\u30A8\u30EA\u306B\u57FA\u3065\u3044\u3066Hive\u30C6\u30FC\u30D6\u30EB\u3092\u8AAD\u307F\u53D6\u308A\u3001\u30D5\u30A3\u30FC\u30EB\u30C9\u3092\u62BD\u51FA\u3057\u307E\u3059
 PROPERTY.NAME=Property Type (\u30D7\u30ED\u30D1\u30C6\u30A3\u30BF\u30A4\u30D7)
 USE_EXISTING_CONNECTION.NAME=\u65E2\u5B58\u306E\u63A5\u7D9A\u3092\u4F7F\u7528
@@ -26,6 +27,9 @@ DISTRIBUTION.ITEM.APACHE=Apache
 DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.MAPR=MapR
 HIVE_VERSION.NAME=Hive\u306E\u30D0\u30FC\u30B8\u30E7\u30F3
+HIVE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
+HIVE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1\u30E2\u30FC\u30C9)
+HIVE_VERSION.ITEM.MAPR2=MapR 2.0.0
 CONNECTION_MODE.NAME=\u63A5\u7D9A\u30E2\u30FC\u30C9
 CONNECTION_MODE.ITEM.EMBEDDED=\u7D44\u307F\u8FBC\u307F
 CONNECTION_MODE.ITEM.STANDALONE=\u30B9\u30BF\u30F3\u30C9\u30A2\u30ED\u30F3
@@ -38,6 +42,7 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=\u30D7\u30ED\u30D1\u30C6\u30A3
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=\u5024
 CONN.NAME=\u63A5\u7D9A
 HADOOP_PROPS.NAME=Hadoop \u30D7\u30ED\u30D1\u30C6\u30A3
+HIVE_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 HBASE_GROUP.NAME=HBase\u8A2D\u5B9A
 STORE_BY_HBASE.NAME=HBase\u306B\u3088\u308B\u30B9\u30C8\u30A2
 DEFINE_REGISTER_JAR.NAME=HBase\u7528\u306B\u767B\u9332\u3059\u308Bjar\u3092\u5B9A\u7FA9\u3057\u307E\u3059
@@ -52,6 +57,7 @@ REGISTER_JAR.ITEM.JAR_NAME.ITEM.ZOOKEEPER=zookeeper
 REGISTER_JAR.ITEM.JAR_NAME.ITEM.PROTOBUF-JAVA=protobuf-java
 DISTRIBUTION.ITEM.CUSTOM=\u30AB\u30B9\u30BF\u30E0 - \u975E\u30B5\u30DD\u30FC\u30C8
 DISTRIBUTION.ITEM.AMAZON_EMR=Amazon EMR
+HIVE_VERSION.ITEM.APACHE_1_0_3_EMR=Apache 1.0.3 (Hive 0.8.1)
 HIVE_SERVER.NAME=Hive\u30B5\u30FC\u30D0\u30FC
 HIVE_SERVER.ITEM.HIVE=Hive 1
 HIVE_SERVER.ITEM.HIVE2=Hive 2
