--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages_pl.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages_pl.properties
@@ -17,3 +17,4 @@ CONNECTION_MODE.NAME=Tryb po\u0142\u0105czenia
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=W\u0142a\u015Bciwo\u015B\u0107
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Warto\u015B\u0107
 CONN.NAME=Po\u0142\u0105czenie
+ADVANCED_PROPERTIES.ITEM.VALUE=Warto\u015B\u0107
