--- a/main/plugins/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tHiveLoad/tHiveLoad_messages_en.properties
@@ -163,3 +163,4 @@ GOOGLE_PROJECT_ID.NAME=Project identifier
 GOOGLE_JARS_BUCKET.NAME=Google Storage staging bucket
 DEFINE_PATH_TO_GOOGLE_CREDENTIALS.NAME=Provide Google Credentials in file
 PATH_TO_GOOGLE_CREDENTIALS.NAME=Path to Google Credentials file
+TARGET.NAME=Target type
