--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_ja.properties
@@ -13,6 +13,7 @@ DIE_ON_ERROR.NAME=\u30A8\u30E9\u30FC\u5F37\u5236\u7D42\u4E86
 DROP_COLLECTION_CREATE.NAME=\u5B58\u5728\u3059\u308B\u5834\u5408\u306F\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u3092\u30C9\u30ED\u30C3\u30D7
 GROUP.ITEM.ATTRIBUTE=\u5C5E\u6027
 GROUP.ITEM.ORDER=\u9806\u5E8F
+GROUP.ITEM.COLUMN=\u95A2\u9023\u3059\u308B\u30AB\u30E9\u30E0
 GROUP.ITEM.PATH=JSON\u30D1\u30B9
 GROUP.ITEM.VALUE=\u30C7\u30D5\u30A9\u30EB\u30C8\u5024
 GROUP.NAME=\u5206\u985E\u57FA\u6E96
@@ -26,10 +27,12 @@ IS_VIRTUAL_COMPONENT.NAME=JSON\u30C9\u30AD\u30E5\u30E1\u30F3\u30C8\u4F5C\u6210
 LONG_NAME=MongoDB\u30B3\u30EC\u30AF\u30B7\u30E7\u30F3\u306B\u30C9\u30AD\u30E5\u30E1\u30F3\u30C8\u3092\u633F\u5165\u3059\u308B\u304B\u3001\u307E\u305F\u306F\u30C9\u30AD\u30E5\u30E1\u30F3\u30C8\u3092\u66F4\u65B0\u3057\u307E\u3059
 LOOP.ITEM.ATTRIBUTE=\u5C5E\u6027
 LOOP.ITEM.ORDER=\u9806\u5E8F
+LOOP.ITEM.COLUMN=\u95A2\u9023\u3059\u308B\u30AB\u30E9\u30E0
 LOOP.ITEM.PATH=JSON\u30D1\u30B9
 LOOP.ITEM.VALUE=\u30C7\u30D5\u30A9\u30EB\u30C8\u5024
 LOOP.NAME=JSON\u30EB\u30FC\u30D7
 MAP.NAME=JSON \u30C4\u30EA\u30FC\u306E\u69CB\u6210
+MAPPING.ITEM.PARENT_NODE_PATH=\u89AA\u30CE\u30FC\u30C9\u30D1\u30B9
 MAPPING.NAME=Mapping
 NB_LINE.NAME=NB_LINE
 PASSWORD.NAME=\u30D1\u30B9\u30EF\u30FC\u30C9
@@ -40,6 +43,7 @@ REMOVE_ROOT.NAME=\u30EB\u30FC\u30C8\u30CE\u30FC\u30C9\u3092\u524A\u9664\u3057\u3
 REQUIRED_AUTHENTICATION.NAME=\u8A8D\u8A3C\u3092\u4F7F\u7528
 ROOT.ITEM.ATTRIBUTE=\u5C5E\u6027
 ROOT.ITEM.ORDER=\u9806\u5E8F
+ROOT.ITEM.COLUMN=\u95A2\u9023\u3059\u308B\u30AB\u30E9\u30E0
 ROOT.ITEM.PATH=JSON\u30D1\u30B9
 ROOT.ITEM.VALUE=\u30C7\u30D5\u30A9\u30EB\u30C8\u5024
 ROOT.NAME=\u30EB\u30FC\u30C8
