--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages_pl.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages_pl.properties
@@ -7,3 +7,5 @@ PORT.NAME=Port
 PROPERTY.NAME=W\u0142a\u015Bciwo\u015B\u0107
 AUTHENTICATION.NAME=Autentykacja
 DB_VERSION.NAME=Wersja bazy danych
+COMMAND_KEYVALUES.ITEM.KEY=Klucz
+COMMAND_KEYVALUES.ITEM.VALUE=Warto\u015B\u0107
