--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jBatchOutput/tNeo4jBatchOutput_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jBatchOutput/tNeo4jBatchOutput_messages_fr.properties
@@ -2,5 +2,5 @@ HELP=org.talend.help.tNeo4jBatchInsertNode
 CONNECTION_GROUP.NAME=Base de données
 CONNECTION.NAME=Connexion
 DATABASE_PATH.NAME=Chemin de la base de données
-CONFIGURATION.NAME=Configuration du Keystore :
+CONFIGURATION.ITEM.KEY=Nom du paramètre (chaîne | ex: dbms.pagecache.memory)
 CONFIGURATION.ITEM.VALUE=Valeur du paramètre (expression | ex : "2G")
