--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jBatchOutputRelationship/tNeo4jBatchOutputRelationship_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jBatchOutputRelationship/tNeo4jBatchOutputRelationship_messages_fr.properties
@@ -2,6 +2,6 @@ HELP=org.talend.help.tNeo4jEmbeddedBatchRelationshipNode
 CONNECTION_GROUP.NAME=Base de données
 CONNECTION.NAME=Connexion
 DIE_ON_ERROR.NAME=Arrêter en cas d'erreur
-CONFIGURATION.NAME=Configuration du Keystore :
 DATABASE_PATH.NAME=Chemin de la base de données
+CONFIGURATION.ITEM.KEY=Nom du paramètre (chaîne | ex: dbms.pagecache.memory)
 CONFIGURATION.ITEM.VALUE=Valeur du paramètre (expression | ex : "2G")
