--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutput/tNeo4jOutput_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutput/tNeo4jOutput_messages_ja.properties
@@ -1,4 +1,5 @@
 PROPERTYADVANCED.NAME=PROPERTYADVANCED
+NB_LINE.NAME=\u884C\u6570
 PROPERTY.NAME=\u30D7\u30ED\u30D1\u30C6\u30A3
 HELP=org.talend.help.tNeo4jOutput
 LONG_NAME=Neo4j\u51FA\u529B
@@ -7,6 +8,7 @@ REMOTE_SERVER.NAME=\u30EA\u30E2\u30FC\u30C8\u30B5\u30FC\u30D0\u30FC
 DATABASE_PATH.NAME=\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u30D1\u30B9
 SERVER_URL.NAME=\u30B5\u30FC\u30D0\u30FCURL
 CONNECTION.NAME=\u63A5\u7D9A
+SHUTDOWN_DB.NAME=\u30B8\u30E7\u30D6\u7D42\u4E86\u5F8C\u306B\u30B7\u30E3\u30C3\u30C8\u30C0\u30A6\u30F3\uFF08\u57CB\u8FBC\u307FDB\u306E\u307F\uFF09
 DATA_ACTION.NAME=\u30C7\u30FC\u30BF\u30A2\u30AF\u30B7\u30E7\u30F3
 DATA_ACTION.ITEM.INSERT=\u633F\u5165
 DATA_ACTION.ITEM.INSERT_OR_UPDATE=\u633F\u5165\u307E\u305F\u306F\u66F4\u65B0
@@ -14,6 +16,8 @@ DATA_ACTION.ITEM.UPDATE=\u66F4\u65B0
 DATA_ACTION.ITEM.UPDATE_OR_INSERT=\u66F4\u65B0\u307E\u305F\u306F\u633F\u5165
 DATA_ACTION.ITEM.DELETE=\u524A\u9664
 INDEX_NAME.NAME=\u30A4\u30F3\u30C7\u30AF\u30B9\u540D
+INDEX_KEY.NAME=\u30A4\u30F3\u30C7\u30C3\u30AF\u30B9\u30AD\u30FC
+INDEX_VALUE.NAME=\u30A4\u30F3\u30C7\u30C3\u30AF\u30B9\u5024
 INDEX_LOOKUP.NAME=\u30A4\u30F3\u30C7\u30C3\u30AF\u30B9
 MAP.NAME=Mapping
 COMMIT_EVERY.NAME=\u3059\u3079\u3066\u30B3\u30DF\u30C3\u30C8
