--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutputRelationship/tNeo4jOutputRelationship_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jOutputRelationship/tNeo4jOutputRelationship_messages_ja.properties
@@ -20,6 +20,8 @@ RELATIONSHIP_DIRECTION.ITEM.OUTGOING=\u51FA\u529B
 RELATIONSHIP_DIRECTION.ITEM.INCOMING=\u53D7\u4FE1
 END_NODE_GROUP.NAME=\u30CE\u30FC\u30C9\u7D42\u7AEF
 END_INDEX_NAME.NAME=\u30A4\u30F3\u30C7\u30AF\u30B9\u540D
+END_INDEX_KEY.NAME=\u30A4\u30F3\u30C7\u30C3\u30AF\u30B9\u30AD\u30FC
+END_INDEX_VALUE.NAME=\u30A4\u30F3\u30C7\u30C3\u30AF\u30B9\u5024
 MAPPING.NAME=Mapping
 MAPPING.ITEM.INPUT_COLUMN=\u5165\u529B\u30AB\u30E9\u30E0
 MAPPING.ITEM.PROPERTY_NAME=\u30D7\u30ED\u30D1\u30C6\u30A3\u540D(\u540C\u3058\u540D\u524D\u306F\u7A7A\u306B\u3057\u307E\u3059)
