--- a/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jRow/tNeo4jRow_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tNeo4jRow/tNeo4jRow_messages_ja.properties
@@ -10,10 +10,12 @@ REMOTE_SERVER.NAME=\u30EA\u30E2\u30FC\u30C8\u30B5\u30FC\u30D0\u30FC
 DATABASE_PATH.NAME=\u30C7\u30FC\u30BF\u30D9\u30FC\u30B9\u30D1\u30B9
 SERVER_URL.NAME=\u30B5\u30FC\u30D0 URL
 CONNECTION.NAME=\u63A5\u7D9A
+SHUTDOWN_DB.NAME=\u30B8\u30E7\u30D6\u7D42\u4E86\u5F8C\u306B\u30B7\u30E3\u30C3\u30C8\u30C0\u30A6\u30F3\uFF08\u57CB\u8FBC\u307FDB\u306E\u307F\uFF09
 SCHEMA.NAME=\u30B9\u30AD\u30FC\u30DE
 QUERY.NAME=\u30AF\u30A8\u30EA
 PARAMETERS.NAME=\u30D1\u30E9\u30E1\u30FC\u30BF\u30FC
 PARAMETERS.ITEM.PARAMETER_NAME=\u30D1\u30E9\u30E1\u30FC\u30BF\u30FC\u540D
+PARAMETERS.ITEM.PARAMETER_VALUE=\u30D1\u30E9\u30E1\u30FC\u30BF\u30FC\u306E\u5024
 DIE_ON_ERROR.NAME=\u30A8\u30E9\u30FC\u5F37\u5236\u7D42\u4E86
 CONNECTION_GROUP.NAME=\u63A5\u7D9A
 NB_NODE_INSERTED.NAME=\u633F\u5165\u30CE\u30FC\u30C9\u6570
