--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigAggregate/tPigAggregate_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigAggregate/tPigAggregate_messages_ja.properties
@@ -2,6 +2,9 @@ LONG_NAME=1\u3064\u307E\u305F\u306F\u8907\u6570\u306E\u30D5\u30A3\u30FC\u30EB\u3
 OPERATIONS.ITEM.FUNCTION=\u6A5F\u80FD
 OPERATIONS.ITEM.FUNCTION.ITEM.AVG=\u5E73\u5747
 OPERATIONS.ITEM.FUNCTION.ITEM.COUNT=\u30AB\u30A6\u30F3\u30C8
+OPERATIONS.ITEM.FUNCTION.ITEM.MAX=\u6700\u5927
+OPERATIONS.ITEM.FUNCTION.ITEM.MIN=\u6700\u5C0F
+OPERATIONS.ITEM.FUNCTION.ITEM.SUM=\u5408\u8A08
 OPERATIONS.ITEM.INPUT_COLUMN=\u5165\u529B\u30AB\u30E9\u30E0
 OPERATIONS.ITEM.OUTPUT_COLUMN=\u8FFD\u52A0\u51FA\u529B\u30AB\u30E9\u30E0
 OPERATIONS.NAME=\u64CD\u4F5C
