--- a/main/plugins/org.talend.designer.components.bigdata/components/tPigCode/tPigCode_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tPigCode/tPigCode_messages_ja.properties
@@ -1,4 +1,4 @@
-HELP=tPig\u306E\u30D8\u30EB\u30D7
+HELP=org.talend.help.tPig
 LONG_NAME=Pig\u30D5\u30ED\u30FC\u3078\u81EA\u5206\u306EPigLatin\u30B9\u30AF\u30EA\u30D7\u30C8\u3092\u5B9F\u884C
 SCRIPT_CODE.NAME=\u30B9\u30AF\u30EA\u30D7\u30C8\u30B3\u30FC\u30C9
 PIGCOMBINE.LINK=Pig
