--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages_ja.properties
@@ -1,4 +1,4 @@
-HELP=tSqoopImport\u306E\u30D8\u30EB\u30D7
+HELP=org.talend.help.tSqoopImport
 LONG_NAME=\u500B\u5225\u306E\u30C6\u30FC\u30D6\u30EB\u3092RDBMS\u304B\u3089HDFS\u306B\u30A4\u30F3\u30DD\u30FC\u30C8
 EXTERNAL.NAME=Sqoop\u306E\u30A4\u30F3\u30DD\u30FC\u30C8
 TEMPFILE.NAME=\u4E00\u6642\u30C7\u30FC\u30BF\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u30D1\u30B9
@@ -44,12 +44,15 @@ DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4.X (MR 1\u30E2\u30FC\u30C9)
 FS_DEFAULT_NAME.NAME=\u30CD\u30FC\u30E0\u30CE\u30FC\u30C9URI
 MAPRED_JOB_TRACKER.NAME=\u30B8\u30E7\u30D6\u30C8\u30E9\u30C3\u30AB\u30FC\u30DB\u30B9\u30C8
 CONFIGURATION.NAME=\u30B7\u30B9\u30C6\u30E0\u8A2D\u5B9A
+USE_SPEED_PARALLEL.NAME=Parallel Data Transfer\u3092\u4F7F\u7528
+SPECIFIC_PARAMS.NAME=\u30D1\u30E9\u30E1\u30FC\u30BF\u30FC\u3092\u8A2D\u5B9A
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM=\u5F15\u6570
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-input-method=teradata.db.input.method
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-input-stage-database=teradata.db.input.stage.database
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-input-partition-num=teradata.db.input.partition.num
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM.ITEM.teradata-db-input-batch-size=teradata.db.input.batch.size
 SPECIFIC_PARAMS.ITEM.SPECIFIC_PARAM_VALUE=\u5024
+SPEED_PARALLEL.NAME=\u30B3\u30CD\u30AF\u30BF\u30FC\u56FA\u6709\u8A2D\u5B9A
 DB_VERSION.ITEM.MAPR212=MapR 2.1.2 (Sqoop 1.4.2)
 DISTRIBUTION.ITEM.CUSTOM=\u30AB\u30B9\u30BF\u30E0 - \u975E\u30B5\u30DD\u30FC\u30C8
 DB_VERSION.ITEM.HDP_1_3=Hortonworks Data Platform V1.3.0(Condor)
