--- a/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tSqoopImportAllTables/tSqoopImportAllTables_messages_ja.properties
@@ -1,5 +1,6 @@
 HELP=org.talend.help.tSqoopImportAllTables
 LONG_NAME=\u5404\u30C6\u30FC\u30D6\u30EB\u3092RDBMS\u304B\u3089HDFS\u3078\u30A4\u30F3\u30DD\u30FC\u30C8
+EXTERNAL.NAME=\u5168\u30C6\u30FC\u30D6\u30EB\u3092Sqoop\u30A4\u30F3\u30DD\u30FC\u30C8
 TEMPFILE.NAME=\u4E00\u6642\u30C7\u30FC\u30BF\u30C7\u30A3\u30EC\u30AF\u30C8\u30EA\u30D1\u30B9
 CONNECTION.NAME=\u63A5\u7D9A
 USERNAME.NAME=\u30E6\u30FC\u30B6\u30FC\u540D
@@ -21,6 +22,7 @@ ADDITIONAL_JAVA.ITEM.ADDITIONAL_VALUE=\u5024
 QUERY_MODE.NAME=\u30AF\u30A8\u30EA
 USE_QUERY.NAME=\u30AF\u30A8\u30EA\u306E\u4F7F\u7528
 QUERY.NAME=\u30AF\u30A8\u30EA
+USE_SPLIT.NAME=split-by \u306E\u4F7F\u7528
 MODE.NAME=\u30E2\u30FC\u30C9
 USE_COMMANDLINE.NAME=\u30B3\u30DE\u30F3\u30C9\u30E9\u30A4\u30F3\u306E\u4F7F\u7528
 USE_JAVAAPI.NAME=Java API\u306E\u4F7F\u7528
