fix(TBD-6955) Replace CASSANDRA_2_0_0=Cassandra 2.0.0 label with CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)

--- a/i18n/plugins/org.talend.repository.nosql.nl/src/messages_zh_CN.properties
+++ b/i18n/plugins/org.talend.repository.nosql.nl/src/messages_zh_CN.properties
@@ -68,7 +68,7 @@ Neo4jConnForm.button.localDB.label=\u672C\u5730
 Neo4jConnForm.dbPath.label=\u6570\u636E\u5E93\u8DEF\u5F84
 Neo4jConnForm.serverURL.label=\u670D\u52A1\u5668Url
 noSQLRepositoryTranslator.MONGODB_2_6_X=\u6570\u636E\u5E93MongoDB 2.6.X
-noSQLRepositoryTranslator.CASSANDRA_2_0_0=Cassandra 2.0.0
+noSQLRepositoryTranslator.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 noSQLRepositoryTranslator.NEO4J_1_X_X=Neo4J 1.X.X
 noSQLRepositoryTranslator.NEO4J_2_1_X=Neo4J 2.1.X
 CassandraConnForm.port.instruction=\u70B9\u51FB\u4E0B\u9762\u7684\u201C\u68C0\u67E5\u201D\u5C06\u4E0D\u4F1A\u68C0\u67E5\u8BE5\u7AEF\u53E3\u3002 \u5B83\u4EC5\u7528\u4E8E\u7EC4\u4EF6\u8BBE\u7F6E\uFF0C\u4EC5\u5728\u4F5C\u4E1A\u6267\u884C\u65F6\u8FDB\u884C\u68C0\u67E5\u3002
