--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraBulkExec/tCassandraBulkExec_messages_zh_CN.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraBulkExec/tCassandraBulkExec_messages_zh_CN.properties
@@ -3,7 +3,7 @@ SCHEMA.NAME=\u6A21\u5F0F
 DB_VERSION.NAME=DB\u7248\u672C
 DB_VERSION.ITEM.CASSANDRA_1_1_2=\u5361\u6851\u5FB7\u62C91.1.2\uFF08\u4E0D\u63A8\u8350\u4F7F\u7528\uFF09
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (\u4E0D\u63A8\u8350)
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 HOST.NAME=\u4E3B\u673A
 PORT.NAME=\u7AEF\u53E3
 USERNAME.NAME=\u7528\u6237\u540D
