--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages_zh_CN.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages_zh_CN.properties
@@ -9,7 +9,7 @@ USERNAME.NAME=\u7528\u6237\u540D
 DB_VERSION.NAME=\u6570\u636e\u5e93\u7248\u672c
 DB_VERSION.ITEM.CASSANDRA_1_1_2=\u5361\u6851\u5FB7\u62C91.1.2\uFF08\u4E0D\u63A8\u8350\u4F7F\u7528\uFF09
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (\u4E0D\u63A8\u8350)
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 API_TYPE.NAME=API\u7C7B\u578B
 API_TYPE.ITEM.HECTOR=Hector
 API_TYPE.ITEM.DATASTAX=Datastax
