--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraRow/tCassandraRow_messages_ja.properties
@@ -18,7 +18,7 @@ REQUIRED_AUTHENTICATION.NAME=\u8A8D\u8A3C\u3092\u4F7F\u7528
 USERNAME.NAME=\u30E6\u30FC\u30B6\u30FC\u540D
 USE_EXISTING_CONNECTION.NAME=\u65E2\u5B58\u306E\u63A5\u7D9A\u3092\u4F7F\u7528
 DB_VERSION.NAME=DB\u30D0\u30FC\u30B8\u30E7\u30F3
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 KEY_SPACE_DATASTAX.NAME=\u30AD\u30FC\u30B9\u30DA\u30FC\u30B9
 API_TYPE.NAME=API\u30BF\u30A4\u30D7
 API_TYPE.ITEM.HECTOR=Hector
