--- a/i18n/plugins/org.talend.repository.nosql.nl/src/messages_ja.properties
+++ b/i18n/plugins/org.talend.repository.nosql.nl/src/messages_ja.properties
@@ -111,7 +111,7 @@ noSQLRepositoryTranslator.MONGODB_2_6_X=MongoDB 2.6.X
 noSQLRepositoryTranslator.CASSANDRA=Cassandra
 noSQLRepositoryTranslator.CASSANDRA_1_1_2=Cassandra 1.1.2
 noSQLRepositoryTranslator.CASSANDRA_1_2_2=Cassandra 1.2.2
-noSQLRepositoryTranslator.CASSANDRA_2_0_0=Cassandra 2.0.0
+noSQLRepositoryTranslator.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 noSQLRepositoryTranslator.NEO4J=Neo4j
 Neo4jConnForm.absPath.label=\u7D76\u5BFE\u30D1\u30B9
 noSQLRepositoryTranslator.Neo4=Neo4J
