--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraBulkExec/tCassandraBulkExec_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraBulkExec/tCassandraBulkExec_messages_fr.properties
@@ -3,7 +3,7 @@ SCHEMA.NAME=Schéma
 DB_VERSION.NAME=Version de la base de données
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 HOST.NAME=Hôte
 PORT.NAME=Port
 REQUIRED_AUTHENTICATION.NAME=Authentification requise
