--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraBulkExec/tCassandraBulkExec_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraBulkExec/tCassandraBulkExec_messages_ja.properties
@@ -2,7 +2,7 @@ HELP=org.talend.help.tCassandraBulkExec
 LONG_NAME=SSTable\u3092Cassandra\u30BD\u30EA\u30E5\u30FC\u30B7\u30E7\u30F3\u306B\u30D0\u30EB\u30AF\u51FA\u529B\u3057\u307E\u3059\u3002
 SCHEMA.NAME=\u30B9\u30AD\u30FC\u30DE
 DB_VERSION.NAME=DB\u30D0\u30FC\u30B8\u30E7\u30F3
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 HOST.NAME=\u30DB\u30B9\u30C8
 PORT.NAME=\u30DD\u30FC\u30C8
 REQUIRED_AUTHENTICATION.NAME=\u8A8D\u8A3C\u3092\u4F7F\u7528
