--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages_fr.properties
@@ -12,7 +12,7 @@ USERNAME.NAME=Utilisateur
 DB_VERSION.NAME=Version de la base de données
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 API_TYPE.NAME=Type d'API
 API_TYPE.ITEM.HECTOR=Hector
 API_TYPE.ITEM.DATASTAX=Datastax
