--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraConnection/tCassandraConnection_messages_ja.properties
@@ -9,7 +9,7 @@ PROPERTY.NAME=\u30D7\u30ED\u30D1\u30C6\u30A3
 REQUIRED_AUTHENTICATION.NAME=\u8A8D\u8A3C\u3092\u4F7F\u7528
 USERNAME.NAME=\u30E6\u30FC\u30B6\u30FC\u540D
 DB_VERSION.NAME=DB\u30D0\u30FC\u30B8\u30E7\u30F3
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 API_TYPE.NAME=API\u30BF\u30A4\u30D7
 API_TYPE.ITEM.HECTOR=Hector
 API_TYPE.ITEM.DATASTAX=Datastax
