--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_fr.properties
@@ -60,7 +60,7 @@ DB_VERSION.NAME=Version de la base de données
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
 ROW_KEY_TYPE.ITEM.BIGDECIMAL=BigDecimal
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 ROW_KEY_C_TYPE.ITEM.DEFAULT=Défaut
 ROW_KEY_C_TYPE.ITEM.INTEGERTYPE=Integer
 ROW_KEY_C_TYPE.ITEM.ASCIITYPE=Ascii
