--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_ja.properties
@@ -40,7 +40,7 @@ SUPER_COLUMN_TYPE.NAME=\u30B9\u30FC\u30D1\u30FC\u30AB\u30E9\u30E0\u30BF\u30A4\u3
 SUPER_COLUMN_TYPE.ITEM.DATE=\u65E5\u6642
 DB_VERSION.NAME=DB\u30D0\u30FC\u30B8\u30E7\u30F3
 ROW_KEY_TYPE.ITEM.BIGDECIMAL=BigDecimal
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 ROW_KEY_C_TYPE.NAME=\u884C\u30AD\u30FCCassandra\u30BF\u30A4\u30D7
 ROW_KEY_C_TYPE.ITEM.DEFAULT=\u30C7\u30D5\u30A9\u30EB\u30C8
 ROW_KEY_C_TYPE.ITEM.COUNTERCOLUMNTYPE=CounterColumn
