--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_zh_CN.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages_zh_CN.properties
@@ -37,7 +37,7 @@ SUPER_COLUMN_TYPE.ITEM.OBJECT=\u5BF9\u8C61
 DB_VERSION.NAME=\u6570\u636e\u5e93\u7248\u672c
 DB_VERSION.ITEM.CASSANDRA_1_1_2=\u5361\u6851\u5FB7\u62C91.1.2\uFF08\u4E0D\u63A8\u8350\u4F7F\u7528\uFF09
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (\u4E0D\u63A8\u8350)
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 ROW_KEY_C_TYPE.ITEM.DEFAULT=\u9ED8\u8BA4
 ROW_KEY_C_TYPE.ITEM.INTEGERTYPE=\u6574\u6570\u578B
 SUPER_COLUMN_C_TYPE.ITEM.DEFAULT=\u9ED8\u8BA4
