--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages_fr.properties
@@ -47,7 +47,7 @@ USE_EXISTING_CONNECTION.NAME=Utiliser une connexion existante
 DB_VERSION.NAME=Version de la base de données
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (Deprecated)
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (Deprecated)
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 COMPARATOR.ITEM.ASCIITYPE=AsciiTYPE
 COMPARATOR.ITEM.BYTESTYPE=BytesType
 COMPARATOR.ITEM.LEXICALUUIDTYPE=LexicalUUIDType
