--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages_ja.properties
@@ -45,7 +45,7 @@ SUPER_KEY_COLUMN.NAME=\u30B9\u30FC\u30D1\u30FC\u30AB\u30E9\u30E0\u30AD\u30FC
 USERNAME.NAME=\u30E6\u30FC\u30B6\u30FC\u540D
 USE_EXISTING_CONNECTION.NAME=\u65E2\u5B58\u306E\u63A5\u7D9A\u3092\u4F7F\u7528
 DB_VERSION.NAME=DB\u30D0\u30FC\u30B8\u30E7\u30F3
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 COMPARATOR.NAME=\u30AB\u30E9\u30E0\u540D\u6BD4\u8F03\u6F14\u7B97\u5B50
 COMPARATOR.ITEM.ASCIITYPE=AsciiTYPE
 COMPARATOR.ITEM.BYTESTYPE=BytesType
