--- a/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulkExec/tCassandraOutputBulkExec_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tCassandraOutputBulkExec/tCassandraOutputBulkExec_messages_ja.properties
@@ -4,7 +4,7 @@ SCHEMA.NAME=\u30B9\u30AD\u30FC\u30DE
 DB_VERSION.NAME=DB\u30D0\u30FC\u30B8\u30E7\u30F3
 DB_VERSION.ITEM.CASSANDRA_1_1_2=Cassandra 1.1.2 (\u975E\u63A8\u5968)
 DB_VERSION.ITEM.CASSANDRA_1_2_2=Cassandra 1.2.2 (\u975E\u63A8\u5968)
-DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0
+DB_VERSION.ITEM.CASSANDRA_2_0_0=Cassandra 2.0.0 (Deprecated)
 HOST.NAME=\u30DB\u30B9\u30C8
 PORT.NAME=\u30DD\u30FC\u30C8
 REQUIRED_AUTHENTICATION.NAME=\u8A8D\u8A3C\u3092\u4F7F\u7528
