fix(TUP-20104): Cloudera 6 support https://jira.talendforge.org/browse/TUP-20104

--- a/main/plugins/org.talend.hadoop.distribution/src/main/java/messages.properties
+++ b/main/plugins/org.talend.hadoop.distribution/src/main/java/messages.properties
@@ -1,4 +1,5 @@
 DynamicDistributionUtils.monitor.userCancel=User canceled.
+DynamicDistributionUtils.check.sparkVersion.unsupport=Don't support spark version: {0}.
 DynamicModuleAdapter.monitor.buildModule=Collecting dependencies of {0}, mvn uri: {1}
 DynamicModuleAdapter.exception.exclusion.unsupport=Don't support to add exclusions for {0}, currently only support BASE type
 DynamicModuleAdapter.exception.reference.notFound=can't find existing library: {0}
