fix(TUP-19900)tPigload component using HCatalog in repository cannot get some fields in DI job https://jira.talendforge.org/browse/TUP-19900

--- a/main/plugins/org.talend.repository.hcatalog/src/messages.properties
+++ b/main/plugins/org.talend.repository.hcatalog/src/messages.properties
@@ -62,9 +62,11 @@ HCatalogForm.check.database=Database must be specified
 HCatalogForm.check.database.invalid=Database is invalid
 HCatalogForm.check.rowSeparator=Row Separator must be specified
 HCatalogForm.check.fieldSeparator=Field Separator must be specified
+HCatalogForm.check.metastore=Field Metadatastore must be specified
 HCatalogForm.check.checkConnection=You must press the Check Button to check the HCatalog Settings
 HCatalogForm.databaseSettings=Database Settings
 HCatalogForm.text.database=Database
+HCatalogForm.text.metastore=HCat Metastore
 HCatalogForm.button.check=Check
 
 HCatalogSchemaForm.button.retrieveSchema=Retrieve Schema
