Revert "fix(TDI41092):change the babili on 711 for mongoDB deprecated."
This reverts commit 392869b8d13109ffbfe4083d9314ca06ffc752e5.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_sk.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_sk.properties
@@ -15,4 +15,4 @@ ROOT.NAME=Kore\u0148
 SCHEMA.NAME=Sch\u00e9ma
 USERNAME.NAME=U\u017E\u00edvate\u013Esk\u00e9 Meno
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (Deprecated)
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
