--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_fr.properties
@@ -51,7 +51,7 @@ USERNAME.NAME=Utilisateur
 USE_EXISTING_CONNECTION.NAME=Utiliser une connexion existante
 DB_VERSION.NAME=Version de la base de donn\u00e9es
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (Deprecated)
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
 MAPPING.ITEM.REMOVE_NULL_FIELD=Supprimer le champ null
 USE_SSL.NAME=Utiliser une connexion SSL (utilisez un tSetKeystore pour configurer l'authentification)
 CREATE_EMPTY_ELEMENT.NAME=Cr\u00e9er un \u00e9l\u00e9ment vide si n\u00e9cessaire
