--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBRow/tMongoDBRow_messages_fr.properties
@@ -17,7 +17,7 @@ USE_EXISTING_CONNECTION.NAME=Utiliser une connexion existante
 AUTHENTICATION.NAME=Authentification
 DB_VERSION.NAME=Version de la base de donn\u00e9es
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (Deprecated)
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
 USE_SSL.NAME=Utiliser une connexion SSL (utilisez un tSetKeystore pour configurer l'authentification)
 DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
 AUTHENTICATION_MECHANISM.NAME=M\u00e9canisme d'authentification
