--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBGridFSDelete/tMongoDBGridFSDelete_messages_zh_CN.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBGridFSDelete/tMongoDBGridFSDelete_messages_zh_CN.properties
@@ -25,6 +25,7 @@ DB_VERSION.ITEM.MONGODB_3_2_X=MongoDB 3.2.X
 DB_VERSION.ITEM.MONGODB_3_0_X=MongoDB 3.0.X
 DB_VERSION.ITEM.MONGODB_2_6_X=\u6570\u636E\u5E93MongoDB 2.6.X
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X(\u4E0D\u63A8\u8350\u4F7F\u7528)
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X(\u4E0D\u63A8\u8350\u4F7F\u7528)
 READ_PREFERENCE_GROUP.NAME=\u8BFB\u53D6\u9996\u9009\u9879
 SET_READ_PREFERENCE.NAME=\u8BBE\u7F6E\u8BFB\u53D6\u504F\u597D
 READ_PREFERENCE.NAME=\u8BFB\u53D6\u9996\u9009\u9879
