--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages_zh_CN.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBInput/tMongoDBInput_messages_zh_CN.properties
@@ -26,6 +26,7 @@ REPLICA_SET.ITEM.REPLICA_PORT=\u526F\u672C\u7AEF\u53E3
 AUTHENTICATION.NAME=\u8BA4\u8BC1
 DB_VERSION.NAME=\u6570\u636e\u5e93\u7248\u672c
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X(\u4E0D\u63A8\u8350\u4F7F\u7528)
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X(\u4E0D\u63A8\u8350\u4F7F\u7528)
 DB_VERSION.ITEM.MONGODB_2_6_X=\u6570\u636E\u5E93MongoDB 2.6.X
 SET_READ_PREFERENCE.NAME=\u8BBE\u7F6E\u8BFB\u53D6\u504F\u597D
 READ_PREFERENCE.NAME=\u8BFB\u53D6\u9996\u9009\u9879
