--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_zh_CN.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBOutput/tMongoDBOutput_messages_zh_CN.properties
@@ -54,6 +54,7 @@ REPLICA_SET.ITEM.REPLICA_HOST=\u526F\u672C\u4E3B\u673A
 REPLICA_SET.ITEM.REPLICA_PORT=\u526F\u672C\u7AEF\u53E3
 DB_VERSION.NAME=\u6570\u636e\u5e93\u7248\u672c
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X(\u4E0D\u63A8\u8350\u4F7F\u7528)
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X(\u4E0D\u63A8\u8350\u4F7F\u7528)
 DB_VERSION.ITEM.MONGODB_2_6_X=\u6570\u636E\u5E93MongoDB 2.6.X
 MAPPING.ITEM.REMOVE_NULL_FIELD=\u79FB\u9664 Null \u5B57\u6BB5
 USE_SSL.NAME=\u4F7F\u7528SSL\u8FDE\u63A5\uFF08\u8BF7\u4F7F\u7528tSetKeystore\u914D\u7F6E\u8EAB\u4EFD\u9A8C\u8BC1\uFF09
