--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages_fr.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages_fr.properties
@@ -21,8 +21,8 @@ SCHEMA.NAME=Sch\u00e9ma
 USERNAME.NAME=Utilisateur
 USE_EXISTING_CONNECTION.NAME=Utiliser une connexion existante
 DB_VERSION.NAME=Version de la base de donn\u00e9es
-DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
+DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X (d\u00e9pr\u00e9ci\u00e9)
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (d\u00e9pr\u00e9ci\u00e9)
 USE_SSL.NAME=Utiliser une connexion SSL (utilisez un tSetKeystore pour configurer l'authentification)
 DATA_ACTION.ITEM.SET=Set
 DATA_ACTION.ITEM.UPSERT_WITH_SET=Upsert et Set
