--- a/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages_ja.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMongoDBWriteConf/tMongoDBWriteConf_messages_ja.properties
@@ -26,7 +26,7 @@ REPLICA_SET.ITEM.REPLICA_HOST=\u30EC\u30D7\u30EA\u30AB\u30DB\u30B9\u30C8
 REPLICA_SET.ITEM.REPLICA_PORT=\u30EC\u30D7\u30EA\u30AB\u30DD\u30FC\u30C8
 DB_VERSION.NAME=DB\u30D0\u30FC\u30B8\u30E7\u30F3
 DB_VERSION.ITEM.MONGODB_2_5_X=MongoDB 2.5.X (\u975E\u63A8\u5968)
-DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X
+DB_VERSION.ITEM.MONGODB_2_6_X=MongoDB 2.6.X (\u975E\u63A8\u5968)
 USE_SSL.NAME=SSL\u63A5\u7D9A\u306E\u4F7F\u7528(tSetKeystore\u3092\u4F7F\u7528\u3057\u3066\u8A8D\u8A3C\u3092\u8A2D\u5B9A\u3057\u3066\u4E0B\u3055\u3044)
 DATA_ACTION.ITEM.SET=\u8A2D\u5B9A
 DATA_ACTION.ITEM.UPSERT_WITH_SET=\u30BB\u30C3\u30C8\u3067Upsert
