item(TUP-21288): Allow to use multi-thread to collect dynamic distribution dependencies https://jira.talendforge.org/browse/TUP-21288

--- a/main/plugins/org.talend.hadoop.distribution/src/main/java/messages.properties
+++ b/main/plugins/org.talend.hadoop.distribution/src/main/java/messages.properties
@@ -12,3 +12,4 @@ DynamicClassloaderAdapter.monitor.buildClassLoader=Generating classloader for {0
 DynamicDistribution.name.project={0} [{1}]
 DynamicDistribution.name.builtin={0} [Built in]
 DynamicDistribution.name.current=Current project
+DynamicLibraryNeededExtensionAdaper.monitor.waitAllFinish=Waiting for {0} subtasks finish...
