Fix:TUP-21091 Failing to set up Hadoop cluster connection https://jira.talendforge.org/browse/TUP-21091

--- a/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/main/plugins/org.talend.repository.hadoopcluster/src/messages.properties
@@ -140,6 +140,54 @@ GoogleDataprocInfoForm.check.configuration.region=Region must be specified
 GoogleDataprocInfoForm.check.configuration.jarsBucket=Google Storage staging bucket must be specified
 GoogleDataprocInfoForm.check.authentication.credentials=Path to Google Credentials file must be specified
 
+QuboleInfoForm.text.configuration=Configuration
+QuboleInfoForm.text.apiToken=API token
+QuboleInfoForm.text.clusterLabel=Cluster label
+QuboleInfoForm.text.changeAPI=Change API endpoint
+QuboleInfoForm.text.s3ResourceHosting=S3 Resource Hosting
+QuboleInfoForm.text.accessKey=Access Key
+QuboleInfoForm.text.secretKey=Secret Key
+QuboleInfoForm.text.bucketName=Bucket Name
+QuboleInfoForm.text.temResourceFolder=Temporary Resource Folder
+QuboleInfoForm.text.regionCombo=Region
+
+QuboleInfoForm.check.apiToken=API token must be specified
+QuboleInfoForm.check.clusterLabel=Cluster Label must be specified
+QuboleInfoForm.check.accessKey=Access Key must be specified
+QuboleInfoForm.check.secretKey=Secret Key must be specified
+QuboleInfoForm.check.bucketName=Bucket Name must be specified
+QuboleInfoForm.check.temResourceFolder=Temporary Resource Folder must be specified
+
+QuboleInfoForm.combo.endpointDefault=DEFAULT
+QuboleInfoForm.combo.endpointEU_CENTRAL=EU_CENTRAL
+QuboleInfoForm.combo.endpointINDIA=INDIA
+QuboleInfoForm.combo.endpointUS=US
+
+QuboleInfoForm.combo.regionDefault=DEFAULT
+QuboleInfoForm.combo.regionMumbai=Asia Pacific(Mumbai)
+QuboleInfoForm.combo.regionSingapore=Asia Pacific(Singapore)
+QuboleInfoForm.combo.regionSydney=Asia Pacific(Sydney)
+QuboleInfoForm.combo.regionTokyo=Asia Pacific(Tokyo)
+QuboleInfoForm.combo.regionBeijing=China(Beijing)
+QuboleInfoForm.combo.regionIraland=EU(Iraland)
+QuboleInfoForm.combo.regionFrankfurt=EU(Frankfurt)
+QuboleInfoForm.combo.regionGovCloud=AWS GovCloud(US)
+QuboleInfoForm.combo.regionSaoPaulo=South America(Sao Paulo)
+QuboleInfoForm.combo.regionUSStandard=US Standard
+QuboleInfoForm.combo.regionCalifornia=US West(N.California)
+QuboleInfoForm.combo.regionOregon=US West(Oregon)
+
+DataBricksInfoForm.text.configuration=Configuration
+DataBricksInfoForm.text.endPoint=Endpoint
+DataBricksInfoForm.text.clusterID=Cluster ID
+DataBricksInfoForm.text.token=Token
+DataBricksInfoForm.text.dbfsDepFolder=DBFS dependencies folder
+
+DataBricksInfoForm.check.endPoint=EndPoint Label must be specified
+DataBricksInfoForm.check.clusterID=Cluster ID must be specified
+DataBricksInfoForm.check.token=Token Key must be specified
+DataBricksInfoForm.check.dbfsDepFolder=DBFS dependencies folder must be specified
+
 AbstractHadoopSubForm.separatorSettings=Separator Settings
 AbstractHadoopSubForm.rowSeparator=Row Separator
 AbstractHadoopSubForm.rowSeparator.tooltip=Set the row separator
