feat(TUP-21337):Deprecate oozie (view/preferences)
https://jira.talendforge.org/browse/TUP-21337

--- a/main/plugins/org.talend.oozie.scheduler/src/messages.properties
+++ b/main/plugins/org.talend.oozie.scheduler/src/messages.properties
@@ -2,10 +2,10 @@
 TOozieCommonConstants_oozie_prefix_for_preference=oozie-
 TOozieCommonConstants_OS_windows_name_prefix=Windows
 
-OozieSchedulerView_Part_name_nojob=Oozie scheduler
-OozieSchedulerView_Part_name_job=Oozie({0})
-OozieSchedulerView_part_title_name_nojob=No job for Oozie
-OozieSchedulerView_Part_title_job=Oozie {0}
+OozieSchedulerView_Part_name_nojob_deprecated=Oozie scheduler (Deprecated)
+OozieSchedulerView_Part_name_job_deprecated=Oozie (Deprecated) ({0})
+OozieSchedulerView_part_title_name_nojob_deprecated=No job for Oozie (Deprecated)
+OozieSchedulerView_Part_title_job_deprecated=Oozie (Deprecated) {0}
 
 TOozieUIConstants_BTN_Schedule=Schedule
 TOozieUIConstants_BTN_Run=Run
