--- a/main/plugins/org.talend.repository.oozie/src/messages.properties
+++ b/main/plugins/org.talend.repository.oozie/src/messages.properties
@@ -17,7 +17,7 @@ OozieForm.versionTip=please select a version for oozie
 
 OozieWizard.descriptionStep1=Define the properties
 OozieWizard.descriptionStep2=Define the oozie parameters
-OozieWizard.oozieConnection=Oozie Connection
+OozieWizard.oozieConnection.deprecated=Oozie Connection (Deprecated)
 OozieWizard.persistenceException=Access to the data failure
 OozieWizard.titleStep1=New Oozie Connection on repository - Step 1/2
 OozieWizard.titleStep2=New Oozie Connection on repository - Step 2/2
