fix(TBD-9093): change field name in properties_en for Kafka di components

--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaConnection/tKafkaConnection_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaConnection/tKafkaConnection_messages_en.properties
@@ -11,7 +11,7 @@ USE_HTTPS.NAME=Use SSL/TLS
 HTTPS_SETTING.NAME=tSetKeystore
 USE_KRB.NAME=Use kerberos authentication
 JAAS_CONF.NAME=JAAS configuration path
-KRB_SERVICE_NAME.NAME=Kafka brokers principal name
+KRB_SERVICE_NAME.NAME=Kafka brokers service name
 SET_KINIT_PATH.NAME=Set kinit command path
 SET_KRB5_CONF.NAME=Set kerberos configuration path
 KAFKA_VERSION.ITEM.KAFKA_0_10_0_1=Kafka 0.10.0.1
