--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages_en.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaInput/tKafkaInput_messages_en.properties
@@ -39,7 +39,7 @@ USE_HTTPS.NAME=Use SSL/TLS
 HTTPS_SETTING.NAME=tSetKeystore
 USE_KRB.NAME=Use kerberos authentication
 JAAS_CONF.NAME=JAAS configuration path
-KRB_SERVICE_NAME.NAME=Kafka brokers principal name
+KRB_SERVICE_NAME.NAME=Kafka brokers service name
 SET_KINIT_PATH.NAME=Set kinit command path
 SET_KRB5_CONF.NAME=Set kerberos configuration path
 AUTO_OFFSET_RESET_NEW.NAME=New consumer group starts from
